# conductor

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
conductor/: __init__.py  cli.py  coordinator.py  orchestrator.py  pricing.py  replay.py  tracer.py
conductor/backends/: __init__.py  anthropic_adapter.py  base.py  cascade.py  openai_compat.py  scripted.py
conductor/sandbox/: __init__.py  base.py  docker.py  local.py  proxmox.py  proxmox_ssh.py  selfcheck.py
conductor/tools/: __init__.py  builtin.py  registry.py
examples/: README.md  example-ledger.jsonl  example-sandbox-trace.jsonl  example-trace.jsonl
tests/: test_anthropic_adapter.py  test_cascade.py  test_coordinator.py  test_docker_sandbox.py  test_holistic_review_fixes.py  test_openai_compat.py  test_orchestrator.py  test_proxmox_ssh.py  test_replay.py  test_review_fixes.py  test_sandbox.py  test_scripted_backend.py  test_tools.py  test_tracer.py  test_v1_review_fixes.py
