[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conductor-cp"
version = "0.3.1"
description = "A vendor-neutral, self-hosted control plane for LLM agents: one provider-agnostic tool-use loop (Claude + any OpenAI-compatible API + local Ollama), with JSONL tracing and a per-provider cost ledger."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "akagifreeez", email = "akagifreeezworks@gmail.com" }]
keywords = ["llm", "agent", "tool-use", "orchestration", "anthropic", "openai", "ollama", "multi-provider", "observability", "cost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
# The provider-agnostic loop speaks every OpenAI-compatible API over plain
# `requests` (OpenAI / OpenRouter / Groq / Mistral / Together / Fireworks /
# Ollama / LM Studio / vLLM), so no vendor SDK is needed for that path. The
# cost ledger + Usage abstraction is reused from token-router (proven offline
# test double + local/remote split). Anthropic's official SDK is an optional
# extra, imported lazily only when the Anthropic adapter is actually used.
dependencies = [
    "requests>=2.28,<3",
    "token-router @ git+https://github.com/akagifreeez/token-router",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
proxmox = ["proxmoxer>=2.0", "paramiko>=3.0"]
dev = ["pytest>=7"]

[project.scripts]
conductor = "conductor.cli:main"

[project.urls]
Homepage = "https://github.com/akagifreeez/conductor"
Repository = "https://github.com/akagifreeez/conductor"

[tool.hatch.metadata]
# token-router is installed from its GitHub repo (a direct reference) until it is
# published to PyPI; allow that here. For local development it is pip-installed
# editable from the sibling checkout, which takes precedence.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["conductor"]
